ajouter un button retour à l'accueil
il faut faire la correction de CSS pour ident et inscrire

--- a/vue/styleCSS/identInscrire.css
+++ b/vue/styleCSS/identInscrire.css
@@ -139,3 +139,9 @@ body {
   .msg{
     color: #eee;
   }
+  .accueil{
+    background-color: red;
+    position: relative;
+    top: 10%;
+    border-radius: 50%;
+  }
