--- a/vue/styleCSS/identInscrire.css
+++ b/vue/styleCSS/identInscrire.css
@@ -4,7 +4,7 @@ body {
     background-color: #000;
     display: flex;
     justify-content: center;
-    height: 100vh;
+    height: 90vh;
   }
   
   .form {
@@ -12,11 +12,11 @@ body {
     border-radius: 20px;
     box-sizing: border-box;
     height: 690px;
-    padding: 20px;
-    width: 320px;
+    width: 450px;
   }
   
   .title {
+    text-align: center;
     color: #eee;
     font-family: sans-serif;
     font-size: 36px;
@@ -25,6 +25,7 @@ body {
   }
   
   .subtitle {
+    text-align: center;
     color: #eee;
     font-family: sans-serif;
     font-size: 16px;
@@ -33,12 +34,14 @@ body {
   }
   
   .input-container {
+    margin: auto;
     height: 50px;
     position: relative;
-    width: 100%;
+    width: 80%;
+    margin-top: 30px;
   }
   
-  .ic1 {
+/*  .ic1 {
     margin-top: 20px;
   }
   
@@ -53,7 +56,7 @@ body {
   }
   .ic5 {
     margin-top: 60px;
-  }
+  }*/
   
   .input {
     background-color: #303245;
@@ -115,18 +118,19 @@ body {
   }
   
   .submit {
+    margin-left: 10%;
+    margin-bottom: 5%;
+    border: 0;
     background-color: #08d;
     border-radius: 12px;
-    border: 0;
     box-sizing: border-box;
     color: #eee;
     cursor: pointer;
     font-size: 18px;
     height: 50px;
-    margin-top: 5;
-    outline: 0;
+    margin-top: 10%;
     text-align: center;
-    width: 100%;
+    width: 80%;
   }
   .submit:hover{
     background-color: rgb(0, 221, 92);
@@ -145,3 +149,16 @@ body {
     top: 10%;
     border-radius: 50%;
   }
+.returnIdent {
+  margin-top: 50px;
+  color: white;
+  margin-left: 28%;
+}
+.returnIdent a {
+    font-size: 1rem;
+    color: white;
+  }
+
+.returnIdent a:hover{
+  color: #0088dd;
+}
