--- a/vue/styleCSS/card.css
+++ b/vue/styleCSS/card.css
@@ -3,16 +3,15 @@
 }
 .corps{
     background-color: #15172b;
-    width: 100px;
+    width: 120px;
     border-radius: 12px;
     border: 0;
     box-sizing: border-box;
     color: #eee;
     font-size: 18px;
-    height: 200px;
+    height: 100%;
     outline: 0;
     padding: 4px 20px 0;
-    width: 100% !important;
 }
 div .img{
     background-color: red;
@@ -35,5 +34,5 @@ div .desc{
     font-size: 18px;
     height: 100%;
     outline: 0;
-    padding: 4px 20px 0;
+    padding: 10%;
 }
