--- a/vue/styleCSS/accueilNabon.css
+++ b/vue/styleCSS/accueilNabon.css
@@ -1,5 +1,11 @@
 * {box-sizing:border-box}
 
+body{
+  background: rgba(141, 39, 39, 0.8);
+  
+}
+
+
 /* Slideshow container */
 .slideshow-container {
   max-width: 1000px;
