--- a/vue/styleCSS/identInscrire.css
+++ b/vue/styleCSS/identInscrire.css
@@ -14,6 +14,14 @@ body {
     height: 690px;
     width: 450px;
   }
+
+  .form ident{
+    background-color: #15172b;
+    border-radius: 20px;
+    box-sizing: border-box;
+    height: 590px;
+    width: 450px;
+  }
   
   .title {
     text-align: center;
@@ -154,6 +162,16 @@ body {
   color: white;
   margin-left: 28%;
 }
+.returnInscrire {
+  margin-top: 50px;
+  color: white;
+  margin-left: 28%;
+}
+.returnInscrire a {
+  font-size: 1rem;
+  color: white;
+}
+
 .returnIdent a {
     font-size: 1rem;
     color: white;
