--- a/vue/styleCSS/accueilNabon.css
+++ b/vue/styleCSS/accueilNabon.css
@@ -42,7 +42,7 @@ body{
 
 /* On hover, add a black background color with a little bit see-through */
 .prev:hover, .next:hover {
-  background-color: rgba(0,0,0,0.8);
+  background-color: black;
 }
 
 /* Caption text */
