--- a/vue/styleCSS/accueilNabon.css
+++ b/vue/styleCSS/accueilNabon.css
@@ -1,7 +1,7 @@
 * {box-sizing:border-box}
 
 body{
-  background: rgba(141, 39, 39, 0.8);
+  background-color: black;
   
 }
 
@@ -42,7 +42,7 @@ body{
 
 /* On hover, add a black background color with a little bit see-through */
 .prev:hover, .next:hover {
-  background-color: black;
+  background-color: rgba(0,0,0,0.8);
 }
 
 /* Caption text */
@@ -88,7 +88,7 @@ body{
   animation-name: fade;
   animation-duration: 1.5s;
 }
-
+  
 @-webkit-keyframes fade {
   from {opacity: .4}
   to {opacity: 1}
