--- a/vue/styleCSS/accueilNabon.css
+++ b/vue/styleCSS/accueilNabon.css
@@ -1,10 +1,19 @@
 * {box-sizing:border-box}
 
 body{
-  background-color: black;
+  background-color: black ;
   
 }
+.text{
+  font-family: 'Courier New', Courier, monospace;
+  font-style: italic;
+  margin-bottom: 75px;
+  font-size: 50px !important;
+  color: rgb(8, 8, 8) !important;
 
+  background-color: rgb(122, 150, 151);
+  
+}
 
 /* Slideshow container */
 .slideshow-container {
