--- a/vue/styleCSS/accueilNabon.css
+++ b/vue/styleCSS/accueilNabon.css
@@ -2,22 +2,21 @@
 
 body{
   background-color: black ;
+  background: -webkit-gradient(linear, left top, left bottom,
+  color-stop(0%, rgba(0, 0, 0, 1)),
+   color-stop(10%, rgba(0, 0, 0, 1)), 
+   color-stop(24%, rgba(3, 39, 36, 1)),
+    color-stop(37%, rgba(12, 28, 10, 1)), 
+    color-stop(77%, rgba(2, 0, 0, 1)),
+     color-stop(90%, rgba(36, 39, 3, 1)),
+      color-stop(100%, rgba(0, 0, 0, 1)));
   
 }
-.text{
-  font-family: 'Courier New', Courier, monospace;
-  font-style: italic;
-  margin-bottom: 75px;
-  font-size: 50px !important;
-  color: rgb(8, 8, 8) !important;
 
-  background-color: rgb(122, 150, 151);
-  
-}
 
 /* Slideshow container */
 .slideshow-container {
-  max-width: 1000px;
+  max-width: 1500px;
   position: relative;
   margin: auto;
 }
@@ -27,42 +26,19 @@ body{
   display: none;
 }
 
-/* Next & previous buttons */
-.prev, .next {
-  cursor: pointer;
-  position: absolute;
-  top: 50%;
-  width: auto;
-  margin-top: -22px;
-  padding: 16px;
-  color: white;
-  font-weight: bold;
-  font-size: 18px;
-  transition: 0.6s ease;
-  border-radius: 0 3px 3px 0;
-  user-select: none;
-}
-
-/* Position the "next button" to the right */
-.next {
-  right: 0;
-  border-radius: 3px 0 0 3px;
-}
-
-/* On hover, add a black background color with a little bit see-through */
-.prev:hover, .next:hover {
-  background-color: rgba(0,0,0,0.8);
-}
-
 /* Caption text */
 .text {
-  color: #f2f2f2;
-  font-size: 15px;
+  color: rgb(8, 8, 8) ;
+  font-size: 50px ;
   padding: 8px 12px;
   position: absolute;
   bottom: 8px;
   width: 100%;
   text-align: center;
+  font-family: 'Courier New', Courier, monospace;
+  font-style: italic;
+  margin-bottom: 75px;
+  background-color: rgb(122, 150, 151);
 }
 
 /* Number text (1/3 etc) */
@@ -72,22 +48,6 @@ body{
   padding: 8px 12px;
   position: absolute;
   top: 0;
-}
-
-/* The dots/bullets/indicators */
-.dot {
-  cursor: pointer;
-  height: 15px;
-  width: 15px;
-  margin: 0 2px;
-  background-color: #bbb;
-  border-radius: 50%;
-  display: inline-block;
-  transition: background-color 0.6s ease;
-}
-
-.active, .dot:hover {
-  background-color: #717171;
 }
 
 /* Fading animation */
