--- a/vue/styleCSS/components/Menu.css
+++ b/vue/styleCSS/components/Menu.css
@@ -13,19 +13,18 @@ text-align: center;
 vertical-align: middle;
 font-size:20px;
 }
-.bi-2x {
-  font-size: 2em;
-  }
-  .bi {
-  position: relative;
-  display: table-cell;
-  width: 60px;
-  height: 36px;
-  text-align: center;
-  vertical-align: middle;
-  font-size:20px;
-  }
 
+.bi{
+font-size: 2em;
+position: relative;
+display: table-cell;
+width: 60px;
+height: 36px;
+padding-top: 7px;
+text-align: center;
+vertical-align: middle;
+font-size:20px;
+}
 
 .main-menu:hover,nav.main-menu.expanded {
 width:250px;
@@ -88,7 +87,7 @@ position:relative;
 display:table-cell;
 vertical-align:middle;
 width:190px;
-  font-family: 'Titillium Web', sans-serif;
+font-family: 'Titillium Web', sans-serif;
 }
 
 .main-menu>ul.logout {
