--- a/vue/styleCSS/accueilNabon.css
+++ b/vue/styleCSS/accueilNabon.css
@@ -28,7 +28,9 @@ body{
 
 /* Caption text */
 .text {
-  color: rgb(8, 8, 8) ;
+  -webkit-text-stroke: 1px black;
+  -webkit-text-fill-color: red;
+  
   font-size: 50px ;
   padding: 8px 12px;
   position: absolute;
@@ -38,9 +40,14 @@ body{
   font-family: 'Courier New', Courier, monospace;
   font-style: italic;
   margin-bottom: 75px;
-  background-color: rgb(122, 150, 151);
+  font-weight: bolder;
 }
-
+.c2{
+  -webkit-text-fill-color: purple;
+}
+.c1{
+  -webkit-text-fill-color: silver;
+}
 /* Number text (1/3 etc) */
 .numbertext {
   color: #f2f2f2;
