--- a/vue/styleCSS/card.css
+++ b/vue/styleCSS/card.css
@@ -1,3 +1,4 @@
+
 .tout{
     display:flex !important;
 }
@@ -9,21 +10,10 @@
     box-sizing: border-box;
     color: #eee;
     font-size: 18px;
-    height: 100%;
+    height: 200px;
     outline: 0;
     padding: 4px 20px 0;
-}
-.corpsPanier{
-    background-color: #15172b;
-    border-radius: 12px;
-    width: 600px !important;
-    border: 0;
-    box-sizing: border-box;
-    color: #eee;
-    font-size: 18px;
-    height: 100%;
-    outline: 0;
-    padding: 4px 20px 0;
+    width: 100% !important;
 }
 div .img{
     background-color: red;
@@ -34,59 +24,17 @@ div .img{
     font-size: 18px;
     height: 100%;
     outline: 0;
+    padding: 4px 20px 0;
     width: 100%;
-}
-img{
-    border-radius: 12px;
-
 }
 div .desc{
-    font-family: arial;
-    margin-top: 5;
     background-color: #303245;
+    border-radius: 12px;
     border: 0;
     box-sizing: border-box;
     color: #eee;
     font-size: 18px;
     height: 100%;
     outline: 0;
-    padding: 10px;
-    border-radius: 12px;
-
-
-}
-div .descPanier{
-    font-family: arial;
-    margin-top: 5;
-    background-color: #303245;
-    border: 0;
-    box-sizing: border-box;
-    color: #eee;
-    font-size: 18px;
-    height: 100%;
-    outline: 0;
-    padding: 10px;
-    border-radius: 12px;
-    display : flex;
-    width: 100%;
-    
-
-
-}
-li{
-    list-style: none;
-    padding-left: 20px;
-}
-ul{
-    display: flex;
-}
-p{
-    background-color: #5e6281;
-    border-radius: 12px;
-    padding : 3%;
-    border:5px;
-    padding-bottom: 10px;
-    margin-top : 0;
-
-
+    padding: 4px 20px 0;
 }
