--- a/vue/styleCSS/card.css
+++ b/vue/styleCSS/card.css
@@ -1,4 +1,3 @@
-
 .tout{
     display:flex !important;
 }
@@ -10,10 +9,21 @@
     box-sizing: border-box;
     color: #eee;
     font-size: 18px;
-    height: 200px;
+    height: 100%;
     outline: 0;
     padding: 4px 20px 0;
-    width: 100% !important;
+}
+.corpsPanier{
+    background-color: #15172b;
+    border-radius: 12px;
+    width: 600px !important;
+    border: 0;
+    box-sizing: border-box;
+    color: #eee;
+    font-size: 18px;
+    height: 100%;
+    outline: 0;
+    padding: 4px 20px 0;
 }
 div .img{
     background-color: red;
@@ -24,17 +34,59 @@ div .img{
     font-size: 18px;
     height: 100%;
     outline: 0;
-    padding: 4px 20px 0;
     width: 100%;
 }
-div .desc{
-    background-color: #303245;
+img{
     border-radius: 12px;
+
+}
+div .desc{
+    font-family: arial;
+    margin-top: 5;
+    background-color: #303245;
     border: 0;
     box-sizing: border-box;
     color: #eee;
     font-size: 18px;
     height: 100%;
     outline: 0;
-    padding: 4px 20px 0;
+    padding: 10px;
+    border-radius: 12px;
+
+
+}
+div .descPanier{
+    font-family: arial;
+    margin-top: 5;
+    background-color: #303245;
+    border: 0;
+    box-sizing: border-box;
+    color: #eee;
+    font-size: 18px;
+    height: 100%;
+    outline: 0;
+    padding: 10px;
+    border-radius: 12px;
+    display : flex;
+    width: 100%;
+    
+
+
+}
+li{
+    list-style: none;
+    padding-left: 20px;
+}
+ul{
+    display: flex;
+}
+p{
+    background-color: #5e6281;
+    border-radius: 12px;
+    padding : 3%;
+    border:5px;
+    padding-bottom: 10px;
+    margin-top : 0;
+
+
 }
