--- a/vue/styleCSS/accueilNabon.css
+++ b/vue/styleCSS/accueilNabon.css
@@ -22,12 +22,12 @@ body{
 }
 
 /* Hide the images by default */
-.mySlides {
+.slideshow-container .mySlides {
   display: none;
 }
 
 /* Caption text */
-.text {
+.slideshow-container .text {
   -webkit-text-stroke: 1px black;
   -webkit-text-fill-color: red;
   
@@ -42,14 +42,14 @@ body{
   margin-bottom: 75px;
   font-weight: bolder;
 }
-.c2{
+.slideshow-container .c2{
   -webkit-text-fill-color: purple;
 }
-.c1{
+.slideshow-container .c1{
   -webkit-text-fill-color: silver;
 }
 /* Number text (1/3 etc) */
-.numbertext {
+.slideshow-container .numbertext {
   color: #f2f2f2;
   font-size: 12px;
   padding: 8px 12px;
@@ -58,7 +58,7 @@ body{
 }
 
 /* Fading animation */
-.fade {
+.slideshow-container .fade {
   -webkit-animation-name: fade;
   -webkit-animation-duration: 1.5s;
   animation-name: fade;
