css petit correction

--- a/vue/styleCSS/accueilNabon.css
+++ b/vue/styleCSS/accueilNabon.css
@@ -39,7 +39,7 @@ body{
   text-align: center;
   font-family: 'Courier New', Courier, monospace;
   font-style: italic;
-  margin-bottom: 30%;
+  margin-bottom: 75px;
   font-weight: bolder;
 }
 .slideshow-container .c2{
