--- a/vue/styleCSS/components/SwitchPSW.css
+++ b/vue/styleCSS/components/SwitchPSW.css
@@ -215,6 +215,14 @@ form {
     width: 80%;
 }
 
+.submit:hover{
+    background-color: rgb(0, 221, 92);
+}
+
+.submit:active {
+    background-color: #06b;
+}
+
 .retourAcceuil {
     margin-left: 45%;
 
