--- a/vue/styleCSS/components/FactureAdmin.css
+++ b/vue/styleCSS/components/FactureAdmin.css
@@ -1,9 +1,24 @@
+body {
+    align-items: center;
+    background: -webkit-gradient(linear, left top, left bottom,
+    color-stop(0%, rgba(26, 49, 95, 1)),
+    color-stop(10%, rgba(26, 49, 95, 1)),
+    color-stop(24%, rgba(29, 108, 141, 1)),
+    color-stop(37%, rgba(41, 136, 151, 1)),
+    color-stop(77%, rgba(39, 45, 100, 1)),
+    color-stop(90%, rgba(26, 49, 95, 1)),
+    color-stop(100%, rgba(26, 49, 95, 1)));
+    display: flex;
+    justify-content: center;
+    height: 90vh;
+}
+
 .ChoixListeFacture {
     margin : auto;
     display: flex;
     background-color:#0a4870;
-    height: 40px;
-    width: 1000px;
+    height: 30%;
+    width: 50%;
     justify-content: center;
     align-items: center;
 }
