--- a/vue/styleCSS/components/FactureAdmin.css
+++ b/vue/styleCSS/components/FactureAdmin.css
@@ -14,11 +14,15 @@ body {
 }
 
 .ChoixListeFacture {
+    color: white;
     margin : auto;
     display: flex;
     background-color:#0a4870;
-    height: 30%;
+    height: 20%;
     width: 50%;
     justify-content: center;
     align-items: center;
+}
+.input-container, a {
+    margin: 20px;
 }
