--- a/vue/styleCSS/vehicule/louerVoiture.css
+++ b/vue/styleCSS/vehicule/louerVoiture.css
@@ -5,7 +5,43 @@ body{
     
     margin-left: 10%;
 }
-
+.corpsChoix{
+    height: 150px;
+    background-color: #15172b;
+    border-radius: 12px;
+    width: 500px;
+    margin-top: 25%;
+    margin-left: 25%;
+}
+.corpsChoix .gauche{
+    color: whitesmoke;
+    text-decoration: none;
+    background-color: #303245;
+    border-radius: 12px;
+    padding: 5%;
+    margin-right: 2%;
+}
+.corpsChoix .droite {
+    color: whitesmoke;
+    text-decoration: none;
+    background-color: #303245;
+    border-radius: 12px;
+    padding: 5%;
+    margin-left: 2%;
+}
+.corpsChoix h1{
+    color: whitesmoke;
+    font-weight: 500;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.contenu{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding-bottom: 3%;
+}
 * {
     margin: 0;
     padding: 0;
