--- a/vue/styleCSS/AjoutFacture.css
+++ b/vue/styleCSS/AjoutFacture.css
@@ -82,7 +82,7 @@ form {
     width: 80%;
 }
 .submit:hover{
-    background-color: rgb(0, 221, 92);
+    background-color: #20b302;
 }
 
 .submit:active {
