--- a/vue/styleCSS/components/FactureAdmin.css
+++ b/vue/styleCSS/components/FactureAdmin.css
@@ -17,7 +17,6 @@ body {
     color: white;
     margin : auto;
     display: flex;
-    background-color:#15172b;
     height: 20%;
     width: 50%;
     justify-content: center;
@@ -25,4 +24,19 @@ body {
 }
 .input-container, a {
     margin: 20px;
+}
+.submit {
+    margin-left: 10%;
+    margin-bottom:3%;
+    border: 0;
+    background-color: #08d;
+    border-radius: 12px;
+    box-sizing: border-box;
+    color: #eee;
+    cursor: pointer;
+    font-size: 18px;
+    height: 50px;
+    margin-top: 5%;
+    text-align: center;
+    width: 80%;
 }
