--- a/vue/styleCSS/components/Facture.css
+++ b/vue/styleCSS/components/Facture.css
@@ -14,21 +14,21 @@ body {
     height: 90vh;
 }
 .SeeFacture {
-    background-color: #15172b;
     border-radius: 20px;
     box-sizing: border-box;
     height: 430px;
-    width: 900px;
+    width: 1000px;
     margin: auto;
 }
 table {
+    border: 3px solid red;
     font-style: normal;
     font-weight: normal;
     margin: auto;
     background-color: #aaa;
     width: 80%;
     position: relative;
-    top: 10%;
+    top: 5%;
     border-radius: 6px;
     -webkit-border-radius: 6px;
     -moz-border-radius: 6px;
