--- a/vue/styleCSS/vehicule/louerVoiture.css
+++ b/vue/styleCSS/vehicule/louerVoiture.css
@@ -8,7 +8,7 @@ body{
     color-stop(77%, rgba(39, 45, 100, 1)),
     color-stop(90%, rgba(26, 49, 95, 1)),
     color-stop(100%, rgba(26, 49, 95, 1)));
-    display: flex;
+    display: inline-block;
     
     margin-left: 10%;
 }
@@ -18,17 +18,17 @@ body{
     padding: 0;
     font-family: 'Sofia', sans-serif;
 }
-h2 {
+.allVoitures h2 {
     color: #0a4870;
     font-weight: 500;
 }
-.page.ul {
+.allVoitures .page.ul {
     display: flex;
     flex-wrap: wrap;
     list-style: none;
     padding: 0;
 }
-ul .booking-card {
+.allVoitures ul .booking-card {
     position: relative;
     width: 300px;
     display: flex;
@@ -46,7 +46,7 @@ ul .booking-card {
     color: #0a4870;
     transition: 0.3s;
 }
-ul .booking-card::before {
+.allVoitures ul .booking-card::before {
     content: '';
     position: absolute;
     top: 0;
@@ -56,10 +56,10 @@ ul .booking-card::before {
     background: rgba(10, 72, 112, 0);
     transition: 0.3s;
 }
-ul .booking-card .book-container {
+.allVoitures ul .booking-card .book-container {
     height: 200px;
 }
-ul .booking-card .book-container .content {
+.allVoitures ul .booking-card .book-container .content {
     position: relative;
     opacity: 0;
     display: flex;
@@ -70,7 +70,7 @@ ul .booking-card .book-container .content {
     transform: translateY(-200px);
     transition: 0.3s;
 }
-ul .booking-card .book-container .content .btn {
+.allVoitures ul .booking-card .book-container .content .btn {
     border: 3px solid white;
     padding: 10px 15px;
     background: none;
@@ -81,26 +81,26 @@ ul .booking-card .book-container .content .btn {
     cursor: pointer;
     transition: 0.3s;
 }
-ul .booking-card .book-container .content .btn:hover {
+.allVoitures ul .booking-card .book-container .content .btn:hover {
     background: white;
     border: 0px solid white;
     color: #0a4870;
 }
-ul .booking-card .informations-container {
+.allVoitures ul .booking-card .informations-container {
     flex: 1 0 auto;
     padding: 20px;
     background: #f0f0f0;
     transform: translateY(206px);
     transition: 0.3s;
 }
-ul .booking-card .informations-container .title {
+.allVoitures ul .booking-card .informations-container .title {
     position: relative;
     padding-bottom: 10px;
     margin-bottom: 10px;
     font-weight: bold;
     font-size: 1.2em;
 }
-ul .booking-card .informations-container .title::after {
+.allVoitures ul .booking-card .informations-container .title::after {
     content: '';
     position: absolute;
     bottom: 0;
@@ -111,23 +111,23 @@ ul .booking-card .informations-container .title::after {
     margin: auto;
     background: #0a4870;
 }
-ul .booking-card .informations-container .price {
+.allVoitures ul .booking-card .informations-container .price {
     display: flex;
     align-items: center;
     justify-content: center;
     margin-top: 10px;
 }
-ul .booking-card .informations-container .price .icon {
+.allVoitures ul .booking-card .informations-container .price .icon {
     margin-right: 10px;
 }
-ul .booking-card .informations-container .more-information {
+.allVoitures ul .booking-card .informations-container .more-information {
     opacity: 0;
     transition: 0.3s;
 }
-ul .booking-card .informations-container .more-information .info-and-date-container {
+.allVoitures ul .booking-card .informations-container .more-information .info-and-date-container {
     display: flex;
 }
-ul .booking-card .informations-container .more-information .info-and-date-container .box {
+.allVoitures ul .booking-card .informations-container .more-information .info-and-date-container .box {
     flex: 1 0;
     padding: 15px;
     margin-top: 20px;
@@ -138,47 +138,47 @@ ul .booking-card .informations-container .more-information .info-and-date-contai
     font-weight: bold;
     font-size: 0.9em;
 }
-ul .booking-card .informations-container .more-information .info-and-date-container .box .icon {
+.allVoitures ul .booking-card .informations-container .more-information .info-and-date-container .box .icon {
     margin-bottom: 5px;
 }
-ul .booking-card .informations-container .more-information .info-and-date-container .box.info {
+.allVoitures ul .booking-card .informations-container .more-information .info-and-date-container .box.info {
     color: #ec992c;
     margin-right: 10px;
 }
-ul .booking-card .informations-container .more-information .disclaimer {
+.allVoitures ul .booking-card .informations-container .more-information .disclaimer {
     margin-top: 20px;
     font-size: 0.8em;
     color: #7d7d7d;
 }
-ul .booking-card:hover::before {
+.allVoitures ul .booking-card:hover::before {
     background: rgba(10, 72, 112, 0.6);
 }
-ul .booking-card:hover .book-container .content {
+.allVoitures ul .booking-card:hover .book-container .content {
     opacity: 1;
     transform: translateY(0px);
 }
-ul .booking-card:hover .informations-container {
+.allVoitures ul .booking-card:hover .informations-container {
     transform: translateY(0px);
 }
-ul .booking-card:hover .informations-container .more-information {
+.allVoitures ul .booking-card:hover .informations-container .more-information {
     opacity: 1;
 }
 @media (max-width: 768px) {
-    ul .booking-card::before {
+    .allVoitures ul .booking-card::before {
         background: rgba(10, 72, 112, 0.6);
    }
-    ul .booking-card .book-container .content {
+    .allVoitures ul .booking-card .book-container .content {
         opacity: 1;
         transform: translateY(0px);
    }
-    ul .booking-card .informations-container {
+    .allVoitures ul .booking-card .informations-container {
         transform: translateY(0px);
    }
-    ul .booking-card .informations-container .more-information {
+    .allVoitures ul .booking-card .informations-container .more-information {
         opacity: 1;
    }
 }
-.credits {
+.allVoitures .credits {
     display: table;
     background: #0a4870;
     color: white;
@@ -190,9 +190,9 @@ ul .booking-card:hover .informations-container .more-information {
     border-radius: 10px;
     text-align: center;
 }
-.credits a {
+.allVoitures .credits a {
     color: #e3ebf1;
 }
-h1 {
+.allVoitures h1 {
     margin: 10px 20px;
 }
