--- a/vue/styleCSS/AjoutFacture.css
+++ b/vue/styleCSS/AjoutFacture.css
@@ -1,6 +1,13 @@
 body {
+    background: -webkit-gradient(linear, left top, left bottom,
+    color-stop(0%, rgba(26, 49, 95, 1)),
+    color-stop(10%, rgba(26, 49, 95, 1)),
+    color-stop(24%, rgba(29, 108, 141, 1)),
+    color-stop(37%, rgba(41, 136, 151, 1)),
+    color-stop(77%, rgba(39, 45, 100, 1)),
+    color-stop(90%, rgba(26, 49, 95, 1)),
+    color-stop(100%, rgba(26, 49, 95, 1)));
     align-items: center;
-    background-color: white;
     display: flex;
     justify-content: center;
     height: 90vh;
