--- a/vue/styleCSS/vehicule/louerVoiture.css
+++ b/vue/styleCSS/vehicule/louerVoiture.css
@@ -18,6 +18,9 @@ body{
     padding: 0;
     font-family: 'Sofia', sans-serif;
 }
+.wrap{
+    display: flex;
+}
 .allVoitures h2 {
     color: #0a4870;
     font-weight: 500;
