Ajouter un nouveau service pour le client (Mes voitures)
nouveau service + travail sur deux autres services pour le client + fix css

--- a/vue/styleCSS/vehicule/louerVoiture.css
+++ b/vue/styleCSS/vehicule/louerVoiture.css
@@ -241,3 +241,64 @@ body{
         height: 20px !important;
     }
 }
+/************petit formulaire pour les dates*********************/
+.open-button {
+    background-color: #555;
+    color: white;
+    padding: 16px 20px;
+    border: none;
+    cursor: pointer;
+    opacity: 0.8;
+    position: fixed;
+    bottom: 23px;
+    right: 28px;
+    width: 280px;
+  }
+  
+  /* The popup form - hidden by default */
+  .form-popup {
+      
+    display: none;
+    position: fixed;
+    -webkit-transform: translate(-50%,-50%);
+    transform: translate(-50%,-50%);
+    top: 50%;
+    left: 50%;
+    border: 3px solid #f1f1f1;
+    z-index: 9;
+  }
+  .form-popup body{
+    filter: blur(8px);
+    -webkit-filter: blur(8px);
+  }
+  
+  /* Add styles to the form container */
+  .form-container {
+    max-width: 300px;
+    padding: 10px;
+    background-color: white;
+  }
+  
+
+  /* Set a style for the submit/login button */
+  .form-container .btn {
+    background-color: #04AA6D;
+    color: white;
+    padding: 16px 20px;
+    border: none;
+    cursor: pointer;
+    width: 100%;
+    margin-bottom:10px;
+    opacity: 0.8;
+  }
+  
+  /* Add a red background color to the cancel button */
+  .form-container .cancel {
+    background-color: red;
+  }
+  
+  /* Add some hover effects to buttons */
+  .form-container .btn:hover, .open-button:hover {
+    opacity: 1;
+  }
+ 
