Fix Voir les Voiture Menu Style

--- a/vue/styleCSS/vehicule/louerVoiture.css
+++ b/vue/styleCSS/vehicule/louerVoiture.css
@@ -9,17 +9,35 @@ body{
     color-stop(90%, rgba(26, 49, 95, 1)),
     color-stop(100%, rgba(26, 49, 95, 1)));
     display: inline-block;
-    
+
     margin-left: 10%;
 }
 
-* {
+*{
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
     font-family: 'Sofia', sans-serif;
+    scrollbar-color: transparent transparent; /* thumb and track color */
+    scrollbar-width: 0px;
 }
-.wrap{
-    display: flex;
+
+
+*::-webkit-scrollbar {
+    width: 0;
+}
+
+*::-webkit-scrollbar-track {
+    background: transparent;
+}
+
+*::-webkit-scrollbar-thumb {
+    background: transparent;
+    border: none;
+}
+
+* {
+    -ms-overflow-style: none;
 }
 .allVoitures h2 {
     color: #0a4870;
@@ -30,10 +48,6 @@ body{
     flex-wrap: wrap;
     list-style: none;
     padding: 0;
-}
-.wrap{
-    padding-top: 100px;
-    display: flex;
 }
 .allVoitures ul .booking-card {
     position: relative;
@@ -63,9 +77,11 @@ body{
     bottom: 0;
     background: rgba(10, 72, 112, 0);
     transition: 0.3s;
+    z-index: auto;
 }
 .allVoitures ul .booking-card .book-container {
     height: 200px;
+    z-index: auto;
 }
 .allVoitures ul .booking-card .book-container .content {
     position: relative;
@@ -77,6 +93,7 @@ body{
     width: 100%;
     transform: translateY(-200px);
     transition: 0.3s;
+    z-index: auto;
 }
 .allVoitures ul .booking-card .book-container .content .btn {
     border: 3px solid white;
@@ -88,11 +105,13 @@ body{
     color: white;
     cursor: pointer;
     transition: 0.3s;
+    z-index: auto;
 }
 .allVoitures ul .booking-card .book-container .content .btn:hover {
     background: white;
     border: 0px solid white;
     color: #0a4870;
+    z-index: auto;
 }
 .allVoitures ul .booking-card .informations-container {
     flex: 1 0 auto;
@@ -100,6 +119,7 @@ body{
     background: #f0f0f0;
     transform: translateY(206px);
     transition: 0.3s;
+    z-index: auto;
 }
 .allVoitures ul .booking-card .informations-container .title {
     position: relative;
@@ -107,6 +127,7 @@ body{
     margin-bottom: 10px;
     font-weight: bold;
     font-size: 1.2em;
+    z-index: auto;
 }
 .allVoitures ul .booking-card .informations-container .title::after {
     content: '';
@@ -118,22 +139,27 @@ body{
     width: 50px;
     margin: auto;
     background: #0a4870;
+    z-index: auto;
 }
 .allVoitures ul .booking-card .informations-container .price {
     display: flex;
     align-items: center;
     justify-content: center;
     margin-top: 10px;
+    z-index: auto;
 }
 .allVoitures ul .booking-card .informations-container .price .icon {
     margin-right: 10px;
+    z-index: auto;
 }
 .allVoitures ul .booking-card .informations-container .more-information {
     opacity: 0;
     transition: 0.3s;
+    z-index: auto;
 }
 .allVoitures ul .booking-card .informations-container .more-information .info-and-date-container {
     display: flex;
+    z-index: auto;
 }
 .allVoitures ul .booking-card .informations-container .more-information .info-and-date-container .box {
     flex: 1 0;
@@ -145,31 +171,39 @@ body{
     background: white;
     font-weight: bold;
     font-size: 0.9em;
+    z-index: auto;
 }
 .allVoitures ul .booking-card .informations-container .more-information .info-and-date-container .box .icon {
     margin-bottom: 5px;
+    z-index: auto;
 }
 .allVoitures ul .booking-card .informations-container .more-information .info-and-date-container .box.info {
     color: #ec992c;
     margin-right: 10px;
+    z-index: auto;
 }
 .allVoitures ul .booking-card .informations-container .more-information .disclaimer {
     margin-top: 20px;
     font-size: 0.8em;
     color: #7d7d7d;
+    z-index: auto;
 }
 .allVoitures ul .booking-card:hover::before {
     background: rgba(10, 72, 112, 0.6);
+    z-index: auto;
 }
 .allVoitures ul .booking-card:hover .book-container .content {
     opacity: 1;
     transform: translateY(0px);
+    z-index: auto;
 }
 .allVoitures ul .booking-card:hover .informations-container {
     transform: translateY(0px);
+    z-index: auto;
 }
 .allVoitures ul .booking-card:hover .informations-container .more-information {
     opacity: 1;
+    z-index: auto;
 }
 
 .allVoitures .credits {
@@ -183,12 +217,15 @@ body{
     -moz-border-radius: 10px;
     border-radius: 10px;
     text-align: center;
+    z-index: auto;
 }
 .allVoitures .credits a {
     color: #e3ebf1;
+    z-index: auto;
 }
 .allVoitures h1 {
     margin: 10px 20px;
+    z-index: auto;
 }
 
 
@@ -205,8 +242,8 @@ body{
     
     grid-area: allV;
     display: grid;
-
-    grid-template-columns: 1fr 1fr 1fr 1fr; 
+    z-index: auto;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
 }
 .menu{
     top: 0px;
@@ -215,23 +252,26 @@ body{
 }
 
 .allVoitures{
-    
+    z-index: auto;
     position: relative;
     
 }
 
 @media screen and (max-width: 1300px) {
     .voitures{
+        z-index: auto;
         grid-template-columns: 1fr 1fr 1fr; 
     }
 }
 @media screen and (max-width: 1000px) {
     .voitures{
+        z-index: auto;
         grid-template-columns: 1fr 1fr; 
     }
 }
 @media screen and (max-width: 750px) {
     .voitures{
+        z-index: auto;
         grid-template-columns: 1fr; 
     }
 }
